--- a/index.html
+++ b/index.html
@@ -4,18 +4,21 @@
   Merhaba arkadaşlar! Ben Akın, bir makine mühendisiyim ve Frontend geliştirmeye
   olan ilgim doğrultusunda kendimi geliştirmeye çalışıyorum.
 </p>
+<!--Frontend geliştirmeye olan ilgim, kullanıcıların web siteleri ve mobil uygulamalarla nasıl etkileşime girdiğini anlama isteğimden kaynaklanıyor.-->
 <h3>Meslek: Makine Mühendisi</h3>
 <p>
   Makine mühendisi olarak çalışırken, web siteleri ve mobil uygulamaların nasıl
   çalıştığını merak etmeye başladım. Bu yüzden Frontend geliştirme öğrenmeye
   karar verdim.
 </p>
+<!--Bu alanda çalışmak, yaratıcı ve problem çözme becerileri gerektiren çok tatmin edici bir iş olabilir.-->
 <h3>Eğitim: Frontend Geliştirme</h3>
 <p>
   Şu anda Frontend geliştirme eğitimi alıyorum. HTML, CSS ve JavaScript
   temellerini öğreniyorum. Ayrıca, ilerleyen zamanlarda React, Angular ve Vue
   gibi popüler Frontend frameworklerini de öğreneceğim.
 </p>
+<!--Frontend geliştirme eğitimimde, HTML, CSS ve JavaScript temellerini öğreniyorum.-->
 <h3>Frontend Geliştirmeye İlgi:</h3>
 <h4>Kullanıcı deneyimine olan ilgim</h4>
 Web siteleri ve mobil uygulamaların nasıl daha kullanıcı dostu hale
@@ -26,6 +29,7 @@ getirilebileceğini öğrenmek beni çok heyecanlandırıyor.
   becerilerini kazandırdı. Bu beceriler, Frontend geliştirmede de çok önemli.
 </p>
 <h3>Kariyer Hedefleri:</h3>
+<!--Frontend geliştirmeyi bir kariyer hedefi olarak değil de kişisel gelişim ve hobi olarak gören bir kişiyim.-->
 <p>
   Frontend geliştirmeyi kendim için bir kişisel gelişim ve hobi olarak
   görüyorum. Bu alandaki bilgimi ve becerilerimi geliştirmenin, web siteleri ve
